--- a/plugin.xml
+++ b/plugin.xml
@@ -43,5 +43,6 @@
         <framework src="./framework/JitsiMeet.framework" custom="true" />
         <framework src="./framework/WebRTC.framework" custom="true" />
 
+	    <hook type="after_platform_add" src="hooks/embedframework/addEmbedded.js" />
     </platform>
 </plugin>
