--- a/plugin.xml
+++ b/plugin.xml
@@ -40,8 +40,8 @@
         <header-file src="src/ios/JitsiPlugin.h" />
         <source-file src="src/ios/JitsiPlugin.mm" />
 
-        <framework src="./framework/JitsiMeet.framework" custom="true" />
-        <framework src="./framework/WebRTC.framework" custom="true" />
-
+        <framework src="./framework/JitsiMeet.framework" custom="true" embed="true" />
+        <framework src="./framework/WebRTC.framework" custom="true" embed="true" />
+        <hook type="after_platform_add" src="hooks/embedframework/addEmbedded.js" />
     </platform>
 </plugin>
